--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2177,7 +2177,7 @@
 
 		body.homepage #header:after {
 			content: '';
-			background: #1C0920;
+			/* background: #1C0920; */
 			display: block;
 			position: absolute;
 			left: 0;
@@ -2185,14 +2185,14 @@
 			width: 100%;
 			height: 100%;
 			opacity: 0;
-			-moz-transition: opacity 2.5s ease-in-out;
-			-webkit-transition: opacity 2.5s ease-in-out;
-			-ms-transition: opacity 2.5s ease-in-out;
-			transition: opacity 2.5s ease-in-out;
-			-moz-transition-delay: 0.5s;
-			-webkit-transition-delay: 0.5s;
-			-ms-transition-delay: 0.5s;
-			transition-delay: 0.5s;
+			/* -moz-transition: opacity 2.5s ease-in-out; */
+			/* -webkit-transition: opacity 2.5s ease-in-out; */
+			/* -ms-transition: opacity 2.5s ease-in-out; */
+			/* transition: opacity 2.5s ease-in-out; */
+			/* -moz-transition-delay: 0.5s; */
+			/* -webkit-transition-delay: 0.5s; */
+			/* -ms-transition-delay: 0.5s; */
+			/* transition-delay: 0.5s; */
 		}
 
 	body.homepage.is-loading #header:after {
