--- a/assets/css/added.css
+++ b/assets/css/added.css
@@ -1,9 +1,9 @@
 #header {
-	background: #002b36 !important;
+	background: #abb7ba !important;
 }
 
 ul.dropotron {
-	background-color: rgba(0, 0, 0, 0.25) !important;
+	background-color: rgba(170, 190, 218, 0.25) !important;
 }
 
 nav#nav {
