fixed banner pic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2096,7 +2096,7 @@
 
 	#header {
 		position: relative;
-		background-image: url(/img/logos/header.jpg);
+		background-image: url(../../img/logos/header.jpg);
         background-size: 50%;
         background-repeat: no-repeat;
         background-position: 50% 42%; 
@@ -2217,7 +2217,7 @@
 	}
 
 		#nav > ul {
-			line-height: 0px;
+            line-height: 0px;
 			position: relative;
 			display: inline-block;
 			margin: 0;
@@ -2252,7 +2252,7 @@
 				display: inline-block;
 				margin: -9px 0.5em 0 0.5em;
 				border-radius: 0.5em;
-				padding: 0.85em;
+				padding: 0.53em;
 				border: solid 1px transparent;
 				-moz-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 				-webkit-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
