--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1804,6 +1804,7 @@
 		border-top: solid 1px rgba(128, 128, 128, 0.2);
 		padding-top: 1.5em;
 		margin-top: 1.5em;
+        text-align: center;
 	}
 
 		ul.divided li:first-child {
@@ -1811,6 +1812,10 @@
 			padding-top: 0;
 			margin-top: 0;
 		}
+
+        ul.divided li p {
+            text-align: center;    
+        }
 
 	ul.menu {
 		height: 1em;
@@ -2099,7 +2104,7 @@
 		background-image: url(../../img/logos/header.jpg);
         background-size: 50%;
         background-repeat: no-repeat;
-        background-position: 50% 42%; 
+        background-position: 50% 43%; 
         background-color: white;
 		color: #fff;
 		text-align: center;
@@ -2591,7 +2596,7 @@
 
 			#header {
          background-repeat: no-repeat;
-         background-position: 50% 41%;  
+         background-position: 50% 44%;  
 			}
 
 				#header .inner {
