--- a/about/about_style.css
+++ b/about/about_style.css
@@ -24,7 +24,9 @@
         margin-right: 20px;
     }
     #board p {
-    margin-left: 220px;
+        margin-left: 220px;
+        text-indent: 0;
+    }
 }
 
 /* adding style for board list */
