--- a/gallery/gallery_style.css
+++ b/gallery/gallery_style.css
@@ -8,14 +8,29 @@
 /* adding style for board list */
 .show {
     float: clear;
-    padding: 20px 0;
     border-style: solid;
     border-top-color: darkgray;
     border-top-width: 1px;
+    padding: 20px;
 }
 
 /* adding a bottom border to the last board member */
 #coral {
     border-bottom-color: darkgray;
     border-bottom-width: 1px;
+}
+
+.vids {
+    position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
