--- a/about/about_style.css
+++ b/about/about_style.css
@@ -45,19 +45,19 @@
 
 /* fixing small style things with each board member */
 #juan, #kathia {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 #berto {
-    margin-bottom: 63px;
+    padding-bottom: 63px;
 }
 
 #chema {
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 #gabino {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
 }
 
 #dani, #emma, #nylani, #konrad, #ayling, #martina {
