--- a/about/about_style.css
+++ b/about/about_style.css
@@ -131,6 +131,38 @@
     }
 }
 
+@media (min-width: 1098px) {
+    
+    /* fixing small style things with each board member */
+    #konrad {
+        padding-bottom: 30px;
+    }
+}
+
+@media (min-width: 1132px) {
+    
+    /* fixing small style things with each board member */
+    #berto {
+        padding-bottom: 115px;
+    }
+    
+    #kathia {
+        padding-bottom: 100px;
+    }
+    
+    #ayling {
+        padding-bottom: 50px;
+    }
+    
+    #dani {
+        padding-bottom: 30px;
+    }
+    
+    #chema {
+        padding-bottom: 200px;
+    }
+}
+
 
 /* adding style for board list */
 .board {
