--- a/membership/member_style.css
+++ b/membership/member_style.css
@@ -4,3 +4,19 @@
 #content p {
     text-indent: 20px;
 }
+
+/* style for the calendar */
+#calendar {
+    position: relative;
+	padding-bottom: 66.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
