fixed some things

--- a/assets/css/extra_details.css
+++ b/assets/css/extra_details.css
@@ -39,3 +39,12 @@
 .fit {
     margin-bottom: 20px;
 }
+
+#main_header {
+    text-align: center;
+}
+
+#show {
+    font-size: 1.2em;
+    margin: auto;
+}
