--- a/assets/css/extra_details.css
+++ b/assets/css/extra_details.css
@@ -16,6 +16,7 @@
 
 #countdown_div {
     background-image: url(/img/show/countdown.jpg);
+    background-size: cover;
     padding: 20px;
     margin: auto;
     margin-bottom: 20px;
@@ -47,4 +48,19 @@
 #show {
     font-size: 1.2em;
     margin: auto;
+}
+
+.vids {
+    position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
