--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1995,8 +1995,8 @@
 	.button {
 		position: relative;
 		display: inline-block;
-		background: #f13c20;
-		color: #fff;
+		background: red;
+		color: white;
 		text-align: center;
 		border-radius: 0.5em;
 		text-decoration: none;
