--- a/cultural_show/show_style.css
+++ b/cultural_show/show_style.css
@@ -84,3 +84,7 @@ img.fb-comment-account {
     background-position: center center;
     background-repeat: no-repeat;
 }
+
+#tickets {
+    margin-bottom: 5px;
+}
