--- a/about/about_style.css
+++ b/about/about_style.css
@@ -37,7 +37,7 @@
         padding-bottom: 63px;
     }
 
-    #chema {
+    #chema, #henry {
         padding-bottom: 120px;
     }
 
@@ -66,7 +66,7 @@
 @media (min-width: 535px) {
     
     /* fixing small style things with each board member */
-    #chema {
+    #chema, #henry {
         padding-bottom: 145px;
     }
 }
@@ -82,7 +82,7 @@
 @media (min-width: 610px) {
     
     /* fixing small style things with each board member */
-    #chema {
+    #chema, #henry {
         padding-bottom: 170px;
     }
     
@@ -158,7 +158,7 @@
         padding-bottom: 30px;
     }
     
-    #chema {
+    #chema, #henry {
         padding-bottom: 200px;
     }
 }
